RESOLVED FIXED35666
[Gtk]: assertion triggered when geolocation getCurrentPosition without an option argument.
https://bugs.webkit.org/show_bug.cgi?id=35666
Summary [Gtk]: assertion triggered when geolocation getCurrentPosition without an opt...
arno.
Reported 2010-03-03 03:50:51 PST
Hi, when getCurrentPosition is called without an option argument (or with an object that don't have a timeout property), PositionOptions does not have a timeout (m_hasTimeout is false). Currently in GeolocationServiceGtk::startUpdating, we have following code: timeout = options->timeout(); without checking if options->hasTimeout(). We should check if options has a timeout before trying to get its value.
Attachments
patch v1 (1.28 KB, patch)
2010-03-03 03:54 PST, arno.
no flags
arno.
Comment 1 2010-03-03 03:54:01 PST
Created attachment 49897 [details] patch v1
Gustavo Noronha (kov)
Comment 2 2010-03-03 05:14:00 PST
Comment on attachment 49897 [details] patch v1 Looks sane, from looking at the PositionOptions code.
WebKit Commit Bot
Comment 3 2010-03-03 05:30:55 PST
Comment on attachment 49897 [details] patch v1 Clearing flags on attachment: 49897 Committed r55459: <http://trac.webkit.org/changeset/55459>
WebKit Commit Bot
Comment 4 2010-03-03 05:30:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.