2010-03-03  Arno Renevier  <arno@renevier.net>

Reviewed by Gustavo Noronha Silva.

        [Gtk]: assertion triggered when geolocation getCurrentPosition without an option argument.
        https://bugs.webkit.org/show_bug.cgi?id=35666

        * platform/gtk/GeolocationServiceGtk.cpp:
        (WebCore::GeolocationServiceGtk::startUpdating):

Canonical link: https://commits.webkit.org/46760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55459 268f45cc-cd09-0410-ab3c-d52691b4dbfc